--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         body
         {
             font-family: 'Lato' , sans-serif;
+            font-size:13pt;
             background-color: #58A6C8;
         }
         .appboxr
@@ -87,10 +88,11 @@
         }
         .maincode
         {
-            height: 250px;
+            min-height: 250px;
             background-color: #594126;
             border-color: #333;
             color: #fff;
+            font-size:10pt;
         }
         
         .segment
@@ -217,7 +219,7 @@
             position: fixed;
             top: 0;
             left: auto;
-            width: 230px;
+            width: auto;
         }
         
         .indent10
