--- a/examples.html
+++ b/examples.html
@@ -75,9 +75,9 @@
                     <h5>
                         How do these Examples even work? AppBoxr as a proxy!</h5>
                     <p>
-                        Because I'm hosting these pages on Github, they're all vanilla HTML pages. BUT,
-                        I pushed an new <code>Install-Package AppBoxr -Pre</code> solution up to <a href="http://appharbor.com">
-                            AppHarbor</a> and have changed my AppBoxr objects to use https://appboxr.appharbor.com.
+                        Because I'm hosting these pages on Github, they're all vanilla HTML. BUT,
+                        I pushed a new <code>Install-Package AppBoxr -Pre</code> solution up to <a href="http://appharbor.com">
+                            AppHarbor</a> and have changed my AppBoxr objects to use https://appboxr.apphb.com.
                     </p>
                     <p>
                         Now, I have a pure javascript / html / css examples doing all the AppBoxr goodness,
