--- a/examples.html
+++ b/examples.html
@@ -80,9 +80,8 @@
                             AppHarbor</a> and have changed my AppBoxr objects to use https://appboxr.apphb.com.
                     </p>
                     <p>
-                        Now, I have a pure javascript / html / css examples doing all the AppBoxr goodness,
-                        yet using a remote server. This cross-domain kungfu is all due ot the awesome sauce
-                        that is <a href="http://signalr.net">SignalR</a>
+                        Now, I have pure javascript / html / css examples doing all the AppBoxr goodness,
+                        yet using a remote server. This cross-domain kungfu is all due to <a href="http://signalr.net">SignalR</a>.
                     </p>
                 </div>
                 <div id="kittens" class="well segment">
