--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                                 Upon what shoulders does Appboxr rest?</h5>
                             <p>
                                 Huge props to <a href="http://signalr.net">SignalR</a> for the real-time goodness
-                                of AppBoxr. Also, much inspiration was drawn from <a href="http://meteor.com">Meteor</a>,
-                                which is a fancy web framework from the future.
+                                of AppBoxr. Also, tons of inspiration was drawn from <a href="http://meteor.com">Meteor</a>,
+                                which is an amazing web framework from the future.
                             </p>
                         </div>
                     </div>
