--- a/examples.html
+++ b/examples.html
@@ -69,7 +69,7 @@
                         <ul class="nav nav-tabs nav-stacked">
                             <li><a href="#proxy">AppBoxr Proxy</a></li>
                             <li><a href="#kittens">Kittens</a></li>
-                            <li><a href="#parties">Parties</a></li>
+                            <li><a href="#">(More coming soon)</a></li>
                         </ul>
                     </div>
                 </div>
@@ -157,12 +157,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div id="parties" class="well segment">
-                    <h5>Parties Example</h5>
-                    <div class="alert alert-info">
-                        Coming Soon
                     </div>
                 </div>
             </div>
