--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                                 AppBoxr is a .NET micro framework that makes writing apps bruisingly simple. No
                                 ORM. No API.
                             </p>
+                            <p>
+                                <small>Note: AppBoxr is in an alpha stage and is not ready for anything prime time yet.</small>
+                            </p>
                         </div>
                         <div class="span3">
                             <div id='slate_941c9aba3f2d'>
